minio/minio-config.yaml
---
# 2. The MinIO Server (Single Pod)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: backup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: minio
          image: quay.io/minio/minio:RELEASE.2022-05-26T05-48-41Z
          command:
            - /bin/sh
            - -c
            - minio server /data --console-address ":9001"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
             drop:
              - ALL
          ports:
            - containerPort: 9000
              name: api
            - containerPort: 9001
              name: console
          volumeMounts:
            - name: storage
              mountPath: /data
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio-pvc

---
# 3. The Network Service
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: backup
spec:
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
  selector:
    app: minio
